# vexyl-guard

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  vexyl
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  install_feedback.yml
.github/workflows/: ci.yml  live-install-canary.yml  (+4 more)
agent/: vexyl-guard.sh
config/: release-signing-public.pem  vexyl-ai-gateway.conf.example  vexyl-guard.conf.example  vexyl-intel-update.conf.example  vexyl-package-repo-signing-public.asc
docs/: build-week-submission.md
intel/: __init__.py  cli.py  client.py  database.py  explanations.py  gateway.py  integration.py  middleware.py  models.py  scoring.py  updates.py
packaging/: build-packages.sh  build-repositories.sh  install-local.sh  install-report.sh  sign-rpm-packages.sh  smoke-install-live-repositories.sh  smoke-install-repositories.sh  verify-package-contents.sh  verify-repositories.sh  vexyl-ai-gateway.service  vexyl-guard.service  vexyl-intel-update.service  vexyl-intel-update.timer
scripts/: build-week-demo.sh  notify-workflow-failure.sh  prepare-release.sh
tests/: run-agent-fixtures.sh  run_ai_runtime_evaluation.py  run_example_compatibility.py  run_gateway_conformance.py  run_node_example_compatibility.mjs  run_node_gateway_conformance.mjs  test_ai_runtime_evaluation.py  test_example_apps.py  test_express_example.mjs  test_framework_integrations.py  test_intel_updates.py  test_node_framework_integrations.mjs  test_node_gateway_client.mjs  test_public_intel.py
(+33 files in other folders)
