[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vexyl-guard"
version = "0.2.11"
description = "Vexyl Guard local defensive tooling"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]

[project.scripts]
vexyl = "intel.cli:main"

[tool.setuptools]
packages = ["intel"]
include-package-data = true
